fixed nav on mobile

--- a/themes/wing-it/css/layout.css
+++ b/themes/wing-it/css/layout.css
@@ -114,13 +114,6 @@ body {
 	    background: #000;
 	    padding: 40px 0 60px;
 	    min-height: 300px;
-	    /*background-color: red;
-  		background-image:
-    		radial-gradient(
-      	circle at top right,
-      	yellow,
-      	#f06d06 50%
-    	);*/
 	}
 	.inner {
 	    max-width: 1100px;
@@ -145,6 +138,10 @@ body {
 		margin: 10px 25px 10px 0px;
 	}
 
+img.img-main {
+	width:100%; 
+	max-width:700px;
+}
 
 /* HEADER */
 .w3-sidebar {
